Add good navbar

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
     <head>
         <title>Uniriders</title>
+        <link rel="stylesheet" href="assets/main.css">
     </head>
     <body>
+        <nav id="navbar">
+            <a href="index.html" class="item">Koti</a>
+            <a href="peli.html" class="item">Peli</a>
+        </nav>
+
         <h1>Uniriders</h1>
     </body> 
 </html>
