--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             <a href="peli.html" class="item">Peli</a>
         </nav>
 
-        <h1>Uniriders</h1>
+        <div style="padding: 25px 50px;">
+            <img src="assets/uniriders.jpg" alt="uniders-logo" align="right"/>
+            <h1>Uniriders</h1>
+            <p>isoi juttui tulos</p>
+        </div>
+
     </body> 
 </html>
