--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
     <head>
         <title>Uniriders</title>
         <link rel="stylesheet" href="assets/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav id="navbar">
-            <a href="index.html" class="item">Koti</a>
-            <a href="peli.html" class="item">Peli</a>
+            <div class="item">
+                <a href="index.html"><img src="assets/uniriders.jpg" alt="uniders-logo" width="50px" height="50px"></a>
+            </div>
+            <div class="item">
+                <a href="index.html">Koti</a>
+            </div>
+            <div class="item">
+                <a href="#">Peli</a>
+            </div>
         </nav>
 
         <div style="padding: 25px 50px;">
