--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div style="padding: 25px 50px;">
             <img src="assets/uniriders.jpg" alt="uniders-logo" align="right"/>
             <h1>Uniriders</h1>
-            <p>isoi juttui tulos</p>
+            <p>isoi juttui tulos!</p>
         </div>
 
     </body> 
