--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <a href="index.html">Koti</a>
             </div>
             <div class="item">
+                <a href="blog.html">Blogi</a>
+            </div>
+            <div class="item">
                 <a href="#">Peli</a>
             </div>
         </nav>
@@ -21,7 +24,7 @@
         <div style="padding: 25px 50px;">
             <img src="assets/uniriders.jpg" alt="uniders-logo" align="right"/>
             <h1>Uniriders</h1>
-            <p>isoi juttui tulos!</p>
+            <p>isoi juttui tulos</p>
         </div>
 
     </body> 
