--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Uniriders</title>
-        <link rel="stylesheet" href="assets/main.css">
+        <link rel="stylesheet" href="assets/index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
