add official pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div style="padding: 25px 50px;">
             <img src="assets/uniriders.jpg" alt="uniders-logo" align="right"/>
             <h1>Uniriders</h1>
-            <p>isoi juttui tulos</p>
+            <p>Isoi juttui tulos</p>
+            <p>Viralliset sivut: <a href="https://blogs.helsinki.fi/uniriders-hki/">https://blogs.helsinki.fi/uniriders-hki/</p>
         </div>
 
     </body> 
